--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="jumbotron" style="background-color:var(--cambridge-blue); color: var(--baby-powder);">
   <h1 class="display-4" >Bienvenidos a mi pagina Personal</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <p class="lead">Desde el CETIS 131.</p>
   <hr class="my-4">
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <p class="lead">
